@@ -1,34 +1,56 @@
-function U = mod_add(x, dim, N)
-% MOD_ADD  Modular addition gate.
-%  U = mod_add(x, dim)    % N == prod(dim)
-%  U = mod_add(x, dim, N) % gate dimension prod(dim) must be >= N
+function U = mod_add(d1, d2, N)
+% MOD_ADD  Modular adder gate.
+%  U = mod_add(d1, d2)    % N == prod(d2)
+%  U = mod_add(d1, d2, N) % target register dimension prod(d2) must be >= N
 %
 %  Returns the gate U, which, operating on the computational state
-%  |y>, increments it by x (mod N):  U |y> = |y+x (mod N)>.
+%  |x, y>, produces |x, y+x (mod N)>.
+%  d1 and d2 are the control and target register dimensions.
 %
-%  If N is given, U will act trivially on computational states >= N.
+%  If N is given, U will act trivially on target states >= N.
+%
+%  Notes:
+%  The modular subtractor gate can be obtained by taking the
+%  Hermitian conjugate of mod_add.
+%  mod_add(2, 2) is equal to CNOT.
 
 % Ville Bergholm 2010
 
 
-if (~isscalar(dim))
-  dim = prod(dim); % vector of dimensions
+if (~isscalar(d1))
+  d1 = prod(d1); % vector of dimensions
+end
+
+if (~isscalar(d2))
+  d2 = prod(d2); % vector of dimensions
 end
 
 if (nargin < 3)
-  N = dim;
+  N = d2;
 else
-  if (dim < N)
-    error('Gate dimension must be >= N.')
+  if (d2 < N)
+    error('Target register dimension must be >= N.')
   end
 end
 
-U = sparse(dim, dim);
-for y=0:N-1
-  U(mod(x+y, N)+1, y+1) = 1;  % MATLAB indexing starts at 1
-end
+% NOTE: a real quantum computer would implement this gate using a
+% sequence of reversible arithmetic gates but since we don't have
+% one we might as well cheat
 
-% U acts trivially for states >= N
-for j=N+1:dim
-  U(j,j) = 1;  % MATLAB indexing starts at 1
+dim = d1 * d2;
+U = sparse(dim, dim);
+
+for a=0:d1-1
+  for b=0:d2-1
+    y = d2*a +b;
+
+    if (b < N)
+      x = d2*a +mod(a+b, N);
+    else
+      % U acts trivially for target states >= N
+      x = y;
+    end
+
+    U(x+1, y+1) = 1;  % MATLAB indexing starts at 1
+  end
 end
